@@ -19,8 +19,10 @@ package org.apache.solr.logging.jul;
 
 import java.util.logging.LogRecord;
 
+import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.logging.LogWatcher;
 
+@SuppressForbidden(reason = "class is specific to java.util.logging")
 public final class RecordHandler extends java.util.logging.Handler {
   final LogWatcher<LogRecord> framework;
   
