@@ -6,3 +6,7 @@ log4j.appender.stderr = org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.Target = System.err
 log4j.appender.stderr.layout = org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%-5p - %d{yyyy-MM-dd HH:mm:ss.SSS}; %C; %m\n
+
+# quiet down the ZK logging for cli tools
+log4j.logger.org.apache.zookeeper=WARN
+log4j.logger.org.apache.solr.common.cloud=WARN
